cabal-version:       >=1.10
name:                tmpfoo
version:             0.1.0.0
license-file:        LICENSE
author:              Asad Saeeduddin
maintainer:          masaeedu@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md
nix:                 true

library
  exposed-modules:     MyLib
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010

executable tmpfoo
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13, tmpfoo
  default-language:    Haskell2010
